# uniffi-kn-sample

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
rust/: Cargo.toml
rust/src/: lib.rs
src/jvmMain/kotlin/: Main.kt
src/nativeMain/kotlin/: Main.kt
