[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]
name = "math"

[dependencies]
uniffi = { version = "0.27.2", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.27.2", features = [ "build" ] }
